welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: missing arguments for method != in class Object;
follow this method with `_' if you want to treat it as a partially applied function
	if ((a != b)&&(b != c)&&( != c)) {0} else
                                  ^