welcome.lessons.welcome.bat.bool2.GreenTicket.scala.code
def greenTicket(a:Int, b:Int, c:Int):Int = {
	if ((a != b)&&(b != c)&&( != c)) {0} else
	if ((a == b)&&(b == c)) {20} else {10}
}
